tests/baselines/reference/decoratorOnArrowFunction.errors.txt
decoratorOnArrowFunction.ts(3,16): error TS1109: Expression expected.
decoratorOnArrowFunction.ts(3,17): error TS1005: ';' expected.


==== decoratorOnArrowFunction.ts (2 errors) ====
    declare function dec<T>(target: T): T;
    
    var F = @dec () => {
                   
!!! error TS1109: Expression expected.
                    ~~
!!! error TS1005: ';' expected.
    }